[tool.poetry]
name = "modeltools"
version = "0.2.0"
description = ""
authors = ["Tanausú <tanausu.jorge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
panda = "^0.3.1"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
